git-svn-id: svn://203.125.43.235/blossoms/vendor/plugins/acts_as_dictionary@40777 798b37cb-fcb3-7149-94e7-c2420af4a3b0

--- a/README
+++ b/README
@@ -11,7 +11,7 @@ This plugin relies on the Hunspell gem, which in turn requires the Hunspell libr
 To install Hunspell:
 	
 	curl -L http://downloads.sourceforge.net/hunspell/hunspell-1.1.12-2.tar.gz -o hunspell-1.1.12-2.tar.gz
-	tar -xvf hunspell-1.1.12-2.tar.gz
+	tar -zxvf hunspell-1.1.12-2.tar.gz
 	cd hunspell-1.1.12
 	./configure
 	make
