use build-in Hunspell Ruby bindling
git-svn-id: svn://203.125.43.235/blossoms/vendor/plugins/acts_as_dictionary@42248 798b37cb-fcb3-7149-94e7-c2420af4a3b0

--- a/README
+++ b/README
@@ -74,7 +74,7 @@ You can also do:
 	
 This is also a dynamic class method (*_dictionary), which returns the Hunspell gem dictionary object, which you can use as such:
 
-	>> Building.name_dictionary.spellcheck("Empire State Building")
+	>> Building.name_dictionary.check("Empire State Building")
 	=> true
 
 	>> Building.name_dictionary.suggest("Emprye State Buildng".downcase)
